# algorithms-in-haskell

./: AGENTS.md  CMakeLists.txt  README.md  dev_run.sh  test.lox  your_program.sh
src/: commands.cpp  commands.hpp  main.cpp
src/core/: error_reporter.cpp  error_reporter.hpp  file_io.cpp  file_io.hpp  format.cpp  format.hpp  source_manager.hpp  span.hpp
src/evaluator/: environment.cpp  environment.hpp  evaluator.cpp  evaluator.hpp  native.cpp  native.hpp  runtime_error.hpp
src/frontend/: ast.cpp  ast.hpp  ast_printer.cpp  ast_printer.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/sema/: sema.cpp  sema.hpp
